<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/clientNameTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Str_clientNameTextView" />

            <EditText
                android:id="@+id/clientNameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="android" >

                <requestFocus />

            </EditText>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/serverHostTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Str_serverHostTextView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left" >

                        <TextView
                            android:id="@+id/serverPortTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Str_serverPortTextView" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <EditText
                            android:id="@+id/serverHostEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/editbox_background"
                            android:ems="10"
                            android:text="192.168.1." />

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left" >

                        <EditText
                            android:id="@+id/serverPortEditText"
                            android:layout_width="84dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/editbox_background"
                            android:ems="10"
                            android:inputType="number"
                            android:text="24800" >
                        </EditText>
                    </LinearLayout>
                </TableRow>

            </TableLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="5dp" >
            </RelativeLayout>
            
            <TextView
                android:id="@+id/inputDeviceTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Str_inputDeviceTextView" />

            <EditText
                android:id="@+id/inputDeviceEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:text="touchscreen" />

            <!-- <TabHost xmlns:android="http://schemas.android.com/apk/res/android" -->
            <!-- android:id="@android:id/tabhost" -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="fill_parent" -->
            <!-- android:layout_below="@id/test"> -->
            <!-- <LinearLayout -->
            <!-- android:orientation="vertical" -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="fill_parent" -->
            <!-- android:padding="5dp"> -->
            <!-- <TabWidget -->
            <!-- android:id="@android:id/tabs" -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="wrap_content" /> -->
            <!-- <FrameLayout -->
            <!-- android:id="@android:id/tabcontent" -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="fill_parent" -->
            <!-- android:padding="5dp" /> -->
            <!-- </LinearLayout> -->
            <!-- </TabHost> -->
            <!--  -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <Button
                    android:id="@+id/connectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/Str_connectButton" />

                <CheckBox
                    android:id="@+id/enable_debug_chekbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/Str_debug_checkbox" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/Debug_Parent_Control"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
				
				<TextView
				    android:id="@+id/outputEditTextView"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/Str_outputEditTextView" />
				
                <EditText
                    android:id="@+id/outputEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="159dp"
                    android:background="@android:drawable/editbox_background"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>